--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config webpack.config.js",
+    "dev": "webpack --config webpack.config.js --watch",
     "prod": "webpack --config webpack.config.prod.js",
     "server": "nodemon server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap-sass": "^3.3.5",
-    "core-decorators": "^0.8.1",
+    "deployd": "^0.8.7",
     "es6-promise": "^3.0.2",
+    "express": "^4.13.3",
     "history": "^1.12.6",
     "immutable": "^3.7.5",
     "isomorphic-fetch": "^2.2.0",
@@ -34,6 +34,7 @@
     "redux-logger": "^2.0.4",
     "redux-router": "^1.0.0-beta4",
     "redux-thunk": "^1.0.0",
+    "socket.io": "^1.3.7",
     "store": "^1.3.17",
     "whatwg-fetch": "^0.10.1"
   },
@@ -52,13 +53,6 @@
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.2",
-    "koa": "^1.1.2",
-    "koa-logger": "^1.3.0",
-    "koa-mount": "^1.3.0",
-    "koa-request": "^1.0.0",
-    "koa-route": "^2.4.2",
-    "koa-static": "^1.5.1",
-    "koa-static-cache": "^3.1.2",
     "mockjs": "^0.1.10",
     "node-sass": "^3.4.1",
     "null-loader": "^0.1.1",
